# myclaw

./: .gitignore  .npmrc  CHANGELOG.md  docs.upstream-sync.md  package.json  tsdown.config.ts
scripts/: docpipe  mycalender  (+4 more)
skills/document-processing-pipeline/: SKILL.md  pyproject.toml
skills/document-processing-pipeline/agents/: openai.yaml
skills/document-processing-pipeline/assets/: html_template.html.j2
skills/document-processing-pipeline/document_processing_pipeline/: __init__.py  __main__.py  assemble_docx.py  assemble_html.py  assemble_markdown.py  assemble_pdf.py  bootstrap.py  cli.py  dependencies.py  derive_text.py  doctor.py  docx_local.py  ingest.py  io_helpers.py  models.py  normalize.py  ocr_local.py  overlay_translate_pdf.py  reconcile.py  router.py  side_by_side_pdf.py  transform_blocks.py  translate_blocks.py  translation_rules.py
skills/document-processing-pipeline/document_processing_pipeline/backends/: __init__.py  mineru_adapter.py  odl_pdf_adapter.py  stirling_adapter.py  unstructured_adapter.py
skills/document-processing-pipeline/references/: backend-selection.md  direct-file-tasks.md  examples.md  ir-contract.md  sidecar-integrations.md
skills/document-processing-pipeline/scripts/: __init__.py  docpipe  pipeline.py
skills/document-processing-pipeline/tests/: __init__.py  conftest.py  test_assemble_office_outputs.py  test_assemble_textual_outputs.py  test_bootstrap.py  test_cli.py  test_dependencies.py  test_derive_text.py  test_doctor.py  test_docx_local.py  test_ingest_pipeline.py  test_io_helpers.py  test_models.py  test_normalize.py  test_normalize_cli.py  test_ocr_local.py  test_overlay_translate_pdf.py  test_pdf_adapters.py  test_router.py  test_side_by_side_pdf.py  test_skill_content.py  test_skill_layout.py  test_smoke_pipeline.py  test_transform_blocks.py  test_transform_reconcile.py  test_translate_blocks.py  test_translation_rules.py  test_unstructured_adapter.py
skills/document-processing-pipeline/tests/fixtures/: sample.html  sample.txt
skills/smart-calendar/: SKILL.md  pyproject.toml  requirements.txt
skills/smart-calendar/data/: config.yml
skills/smart-calendar/references/: design.md  usage.md
skills/smart-calendar/scripts/: sc
skills/smart-calendar/smart_calendar/: __init__.py  __main__.py  cli.py
skills/smart-calendar/smart_calendar/parser/: date_parser.py
skills/smart-calendar/tests/: test_calendar_render.py  test_cli.py  test_conflicts.py  test_parser.py  test_query.py  test_render.py  test_runtime_config.py  test_storage.py
(+423 files in other folders)
